Memperbarui lathian manipulation

--- a/[05] Javascript & DOM/Latihan2-DOM Selection/index.html
+++ b/[05] Javascript & DOM/Latihan2-DOM Selection/index.html
@@ -14,6 +14,7 @@
             <a href="https://youtube.com">Youtube</a>
             <p class="p2">paragraf 2</p>
             <p class="p3">paragraf 3</p>
+            <button>Let's Go</button>
         </section>
         <section id="b">
             <p class="p4">paragraf 4</p>
