Menambahkan script event

--- a/[05] Javascript & DOM/Latihan2-DOM Selection/index.html
+++ b/[05] Javascript & DOM/Latihan2-DOM Selection/index.html
@@ -26,6 +26,6 @@
         </section>
     </div>
 
-<script src="script2_manipulation.js"></script>
+<script src="script3_event.js"></script>
 </body>
 </html>
