modifikasi nodes event

--- a/[05] Javascript & DOM/Latihan2-DOM Selection/index.html
+++ b/[05] Javascript & DOM/Latihan2-DOM Selection/index.html
@@ -13,7 +13,7 @@
             <p class="p1">paragraf 1</p>
             <a href="https://youtube.com">Youtube</a>
             <p class="p2">paragraf 2</p>
-            <p class="p3" onclick="ubahWarnaP3()">paragraf 3</p>
+            <p class="p3">paragraf 3</p>
             <button>Let's Go</button>
         </section>
         <section id="b">
