--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Latihan GIT</title>
 </head>
 <body>
+    <header>Disini adalah header</header>
     <h1>Network Area Makassar</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem placeat eligendi sequi, sapiente soluta, at magnam quibusdam reiciendis nesciunt numquam velit consectetur debitis nemo, facere ipsum eveniet rerum excepturi! Quisquam.</p>
+    <footer>Disini adalah footer</footer>
 </body>
 </html>
