Membuat form di halaman contact

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,8 @@
     <header>Disini adalah header</header>
     <h1>Network Area Makassar</h1>
     <p>Ini adalah contact us</p>
+
+    <form action=""></form>
     <footer>Disini adalah footer</footer>
 </body>
 </html>
