menambah penjelasan contact us

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,7 @@
     <header>Disini adalah header</header>
     <h1>Network Area Makassar</h1>
     <p>Ini adalah contact us</p>
+    <div>Contoh perubahan baris 16</div>
     <footer>Disini adalah footer</footer>
 </body>
 </html>
