--- a/[08] Bootstrap/index.html
+++ b/[08] Bootstrap/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/default-option.css">
     <title>Document</title>
 </head>
 <body>
     <!--Navigasi Bar-->
-    <div class="navbar">
-
+    <div class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a href="index.html" class="navbar-brand"><img src="images/logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarContent"></button>
+        </div>
     </div>
     <!--Header-->
     <div class="jumbotron">
@@ -32,7 +37,8 @@
     </section>
     <!--Footer-->
     <footer>
-        
+
     </footer>
+    <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
